--- a/Seau/src/style/Seau.css
+++ b/Seau/src/style/Seau.css
@@ -316,3 +316,44 @@
   transform: translateX(-50%); /* 정확한 가운데로 이동 */
   z-index: 1000;         /* 다른 요소 위에 표시되게 */
 }
+
+/* NavButton.css */
+.navButton {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  /* width: 100%; */
+  display: flex;
+  align-items: center;
+  padding: 12px 16px;
+  /* text-align: left; */
+  font-size: 14px;
+  font-weight: 500;
+  /* background-color: black; */
+  border: none;
+  border-radius: 8px;
+  margin: 2px 4px;
+  cursor: pointer;
+  color: #6b7280;
+  transition: all 0.2s;
+}
+
+.navButton:hover {
+  background-color: #f9fafb;
+  color: #111827;
+}
+
+/* active 상태 */
+.navButton.active {
+  /* color: #7c3aed;
+  border-right: 2px solid #7c3aed; */
+  background-color: #111827;
+  color: #f3f4f6;
+}
+
+.navButton.active:hover {
+  background-color: #111827;
+  color: #f3f4f6;
+}
